# seoseung-su

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  test.sh  test_google_login.html
.github/workflows/: cd.yml  ci.yml
carts/: models.py  urls.py
carts/forms/: create.py  update.py
carts/migrations/: 0001_initial.py  0002_alter_cart_table.py
carts/tests/: test_cart_create.py  test_cart_update.py
carts/views/: cart_create.py  cart_delete.py  cart_detail_or_list.py  cart_update.py
categories/: context_processors.py  models.py  urls.py
categories/forms/: category.py
categories/migrations/: 0001_initial.py  0002_alter_category_parent.py
categories/tests/: test_category.py  test_category_list.py
categories/views/: category.py  list_category.py
config/: basemodel.py  logging.py  settings.py  urls.py
config/utils/: image_path.py  setup_test_method.py
favorites/: models.py  urls.py
favorites/forms/: favorite.py  favorite_list.py  favorite_toggle.py
favorites/migrations/: 0001_initial.py
favorites/services/: favorite_service.py
favorites/tests/: test_favorite_render.py
favorites/views/: views.py
inquire/: models.py  urls.py
inquire/forms/: inqurie_create.py
inquire/migrations/: 0001_initial.py  0002_alter_inquire_user.py
inquire/services/: inquire_user_valid.py  test_inquire_send_mail.py
inquire/tests/: test_inquire.py  test_inquire_form.py  test_inquire_user_valid.py
inquire/views/: views.py
nginx/: nginx.conf  nginx.dev.conf  nginx.prod.conf
products/: apps.py  models.py  urls.py
products/forms/: product_form.py
products/migrations/: 0001_initial.py  0002_product_user.py  0003_product_sale_price.py  0004_alter_productimage_image.py  0005_product_categories.py
products/templatetags/: product_filters.py
products/tests/: test_product_detail.py  test_product_filter.py  test_product_forms.py  test_product_img.py  test_product_views.py  test_sale_price.py
products/views/: products.py  products_detail.py
reviews/: models.py  urls.py
reviews/forms/: review_create.py
reviews/migrations/: 0001_initial.py  0002_alter_review_images.py  0003_remove_review_images_alter_review_rating_and_more.py
reviews/services/: review_count.py
reviews/templatetags/: review_filters.py
reviews/tests/: test_review_comment.py  test_review_comment_create.py  test_review_comment_delete.py  test_review_comment_update.py  test_review_content.py  test_review_create.py  test_review_img.py  test_review_rating_count.py
reviews/views/: comment_create.py  comment_delete.py  comment_update.py  image_delete.py  review_create.py  review_delete.py  review_update.py
templates/: base.html  home.html
templates/carts/: cart_detail.html
templates/category/: create_category.html  list_category.html
users/: models.py  urls.py
(+58 files in other folders)
