[project]
name = "seseung-soo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.6",
    "django-environ>=0.12.0",
    "django-session-timeout>=0.1.0",
    "pillow>=11.3.0",
    "psycopg2>=2.9.10",
]

[dependency-groups]
dev = [
    "coverage>=7.10.6",
    "django-stubs>=5.2.5",
    "mypy>=1.18.1",
    "pytest>=8.4.2",
    "pytest-django>=4.11.1",
    "ruff>=0.13.0",
]

[tool.ruff]
target-version = "py313"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
ignore_missing_imports = true
python_version = 3.13
strict = true

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.coverage.run]
omit = ["*/test_*.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
